@@ -94,6 +94,7 @@ Bug fixes
  * Added missing form media to user edit form template (Matt Westcott)
  * ``Page.copy()`` no longer copies child objects when the accesssor name is included in ``exclude_fields_in_copy`` (Karl Hobley)
  * Clicking the privacy toggle while the page is still loading no longer loads the wrong data in the page (Helen Chapman)
+ * Added missing ``is_stored_locally`` method to ``AbstractDocument`` (jonny5532)
 
 
 Upgrade considerations
